# wasolutionConsumer

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/api/: requests.rs
src/config/: config.rs
src/database/: connect.rs  insert.rs  mod.rs
src/parser/: library.rs
src/process/: incoming.rs  mod.rs  outgoing.rs
src/rabbit/: connect.rs  mod.rs  setup_rabbit.rs
src/redis_mod/: redis.rs
