[package]
name = "WaSolConsumer"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
futures = "0.3.31"
lapin = "3.0.0"
log = "0.4.27"
reqwest = "0.12.20"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tokio-postgres = "0.7.13"
